style.css
/*OVERALL STYLING*/
@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@300&display=swap');

:root {
  --white: #FFFDFD;
  --grey: rgba(162, 162, 162, 0.81);
  --purple: #16092e;
  --dark-purple: #110624;
  --blue: #0C5DCC;
  --cyan: #0dcaf0;
  --yellow: #faec70;
}

* {
  margin: 0;
  padding: 0;
}

html {
  box-sizing: border-box;
  font-size: 62.5%; /*equals 10px*/
  scroll-behavior: smooth;
  font-family: Montserrat Alternates, sans-serif;
  overflow-x: hidden;
  background-color: var(--purple);
}

*, *:before, *:after {
  box-sizing: inherit;
}

/* MODAL STYLING */
body.modal-open #main{
  -webkit-filter: blur(7px);
  -moz-filter: blur(7px);
  -o-filter: blur(7px);
  -ms-filter: blur(7px);
  filter: blur(7px);
}
.btn-close {
  background: var(--grey);
  color: var(--white) !important;
  font-size: 14px;
  text-align: center;
  padding-bottom: 12px !important;
}
.modal-content {
  color: var(--white);
  background: rgba(17, 6, 36, 0.85) ;
}
.modal-title {
  color: var(--cyan);
  font-size: 20px;
  padding: 10px;
}
.modal-body {
  font-size: 14px;
}
.demo-account-info {
  padding-left: 40px;
  padding-top: 8px;
  color: var(--grey);
}
.technologies {
  list-style-type: none;
}
.technologies label {
  font-weight: bold;
  font-size: 16px;
}
.col-sm-3, .col-sm-4 {
  text-align: center;
  color: #000;
  background-color: var(--cyan);
  border-radius: 8px;
  margin: 10px;
}
.btn {
  font-size: 14px;
}
/*HOME PAGE STYLING*/
body {
  background-color: var(--puruple);
}

#night {
  height: 100vh;
  width: 100vw;
  background: linear-gradient(#16092e, #7E87DE);
  overflow: hidden;
}

#far-mountains {
  z-index: 10;
}

#far-mountain-1 {
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 0 10em 13em 50em;
  border-color: transparent transparent #16082e transparent;
  position: absolute;
  bottom: 0;
  right: -6em;
  filter: blur(0.07em);
}

#far-mountain-2 {
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 0 35em 12em 25em;
  border-color: transparent transparent #16082e transparent;
  position: absolute;
  filter: blur(0.07em);
  bottom: 0;
  left: -15em;
}

#far-mountain-3 {
  border-bottom: 8em solid #16082e;
	border-left: 8em solid transparent;
	border-right: 8em solid transparent;
	height: 0;
	width: 50em;
  filter: blur(0.07em);
  position: absolute;
  bottom: 0;
  left: 20em;
}

#near-mountain-1 {
  border-style: solid;
  border-width: 0 16em 10em 19em;
  border-color: transparent transparent #110624 transparent;
  position: absolute;
  bottom: 0;
  right: -5em;
}

#near-mountain-2 {
	border-bottom: 6em solid #110624;
	border-left: 2.5em solid transparent;
	border-right: 4em solid transparent;
	width: 34em;
  position: absolute;
  bottom: 0;
  left: 22em;
}

#near-mountain-3 {
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 0 20em 9em 15em;
  border-color: transparent transparent #110624 transparent;
  filter: blur(0.02em);
  position: absolute;
  bottom: 0;
  left: -4em;
}

#near-mountain-4 {
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 0 15em 9em 12em;
  border-color: transparent transparent #110624 transparent;
  filter: blur(0.03em);
  position: absolute;
  bottom: 0;
  right: 21em;
}

#moon {
  height: 20em;
  width: 19.6em;
  border-radius: 50%;
  background-color: #B2B2B2;
  box-shadow: 0.5em 0 1em 0.5em rgba(229,229,229,0.3),
              0 0 0.8em 0.4em rgba(229,229,229,0.3),
              0.2em 0 0.5em 0.3em rgba(229,229,229,0.3),
              0em 0 0.3em 0.2em rgba(229,229,229,0.3);
  position: absolute;
  top: 20%;
  left: 5%;
  z-index: 99;
}

#moon::after {
  background-color: rgba(150, 150, 150, 1);
  display: block;
  content: "";
  position: absolute;
  bottom: 5.5em;
  right: 3.3em;
  height: 2.6em;
  width: 2.6em;
  border-radius: 50%;
  box-shadow:
    0.3em 0.1em 0.1em 0 rgba(100, 100, 100, 1),
    -3.2em 2em 0.1em 0 rgba(150, 150, 150, 1),
    -3em 2.1em 0 0 rgba(100, 100, 100, 1),
    -0.1em 3em 0.1em -0.5em rgba(150, 150, 150, 1),
    0.2em 3.1em 0.1em -0.5em rgba(100, 100, 100, 1);
}

.star-1 {
  height: 0.5em;
  width: 0.5em;
  border-radius: 50%;
  background-color: #FFFDFD;
  position: absolute;
  top: 15%;
  right: 35%;
  box-shadow: -20em 18em 0.1em 0.1em var(--yellow),
              -13em 5em 0.1em 0 var(--white),
              -27em -3em 0.1em 0.001em #0F00BF,
              24em 23em 0.1em 0.001em var(--white),
              11em 1em 0.1em 0.011em var(--blue),
              -5em 12em 0.1em 0.01em var(--blue),
              16em 13em 0.1em 0.01em #0F00BF;
  animation: flicker 5s ease;
  animation-iteration-count: infinite;
}

.star-2 {
  height: 0.5em;
  width: 0.5em;
  border-radius: 50%;
  background-color: var(--white);
  position: absolute;
  top: 10%;
  left: 25%;
  box-shadow: 3em 5em 0.1em 0.1em #0F00BF,
              -13em 16em 0.1em 0.05em var(--blue),
              35em 23em 0.05em 0.01em var(--white),
              15em 28em 0.1em 0.1em var(--white),
              22em 26em 0.1em 0.1em var(--blue);
  animation: flicker 7s ease;
  animation-iteration-count: infinite;
}

.star-3 {
  height: 0.5em;
  width: 0.5em;
  border-radius: 50%;
  background-color: #FFFDFD;
  position: absolute;
  right: 8em;
  top: 13em;
  box-shadow: -20em 6em 0.1em 0.1em var(--yellow),
              -80em 28em 0.1em 0.1em var(--white),
              6em -11.5em 0.1em 0.1em var(--yellow),
              -18em 16em 0.1em 0.05em var(--yellow);
  animation: flicker 3s ease;
  animation-iteration-count: infinite;
}

.star-4 {
  height: 0.5em;
  width: 0.5em;
  border-radius: 50%;
  background-color: #faec70;
  position: absolute;
  top: 3em;
  left: 3em;
  box-shadow: 90em 36em 0.1em 0.1em var(--yellow),
              20em 34em 0.1em 0.1em var(--blue),
              0em 38em 0.1em 0.1em var(--yellow),
              40em 20em 0.1em 0.1em var(--white);
  animation: flicker 4s ease;
  animation-iteration-count: infinite;
}

@keyframes flicker {
  0% {opacity: 0.0;}
  50% {opacity: 1.0;}
  100% {opacity: 0.0;}
}

/*GENERAL PORTFOLIO STYLING*/
header {
  font-size: 2em;
  z-index: 100;
  position: absolute;
  bottom: 6em;
  right: 15em;
  animation: fadeIn 6s ease;
}
h1 {
  color: var(--white);
  font-size: 3em;
}

h2 {
  color: #B2B2B2;
  font-size: 0.9em;
}

/* NAVBAR STYLING */

/*PROJECTS SECTION STYLING*/
#projects {
  background-color: var(--purple);
  height: 100vh;
  overflow-y: scroll !important;
}
#projects-header {
  background-color: var(--purple);
  text-decoration: underline;
  text-align: center;
  padding-top: 3em;
  padding-bottom: 2em;
  font-size: 2.5em;
  color: var(--white);
}
.project-title {
  background-color: var(--dark-purple);
  color: var(--grey);
  text-align: center;
  font-size: 1.2rem;
  padding: 1rem;
}
.project-title:hover {
  color: var(--blue);
}
.product-img {
  height: calc(100% - 6.8rem);
  max-height: 250px;
  width: 100%;
  object-fit: cover;
}
.project-tile {
  background-color: var(--dark-purple);
  border: 1px solid var(--grey);
}
.top-buffer {
  margin-top: 4em;
}

/*CONTACT SECTION STYLING*/
#contact {
  height: 105vh;
  background-color: var(--purple);
  text-align: center;
  color: var(--grey);
  padding-top: 10em;
  padding-bottom: 4em;
  margin-top: -1.5em;
  margin-bottom: -1em;
  position: relative;
}
#contact-header {
  font-size: 2.5em;
  color: var(--blue);
  padding-bottom: 3em;
  padding-top: 4em;
}
#contact-details {
  font-size: 2rem;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap; 
  justify-content: center;
  font-weight: bolder;
  color: var(--grey);
}
.contact-item {
  padding: 2rem;
  color: var(--grey);
}
#profile-link:hover {
  color: var(--white);
}
footer {
  border-top: 4px solid var(--blue);
  background-color: var(--black);
  padding-top: 3em;
  position: relative;
  bottom: 10em;
}
 
/*MEDIA QUERIES FOR RESPONSIVE DESIGN*/
/*Extra small devices (small phones)*/
@media only screen 
  and (min-device-width: 320px) 
  and (max-device-width: 413px){
    #product-modal{
      margin-top: 2em !important;
    }
    #projects-header {
      color: red;
      background-color: yellow; 
    }
    #night {
      font-size: 0.65em;
    }
    #moon {
      position: absolute;
      top: 18em;
    }
    header {
      font-size: 1.75em;
      position: absolute;
      left: 4em;
      right: 0;
      bottom: 9em;
    }
    #header-h2 {
      font-size: 2em;
    }
  }

/*Small devices (normal size phones)*/
@media only screen 
  and (min-device-width: 414px) 
  and (max-device-width: 767px) {
    #night {
      width: 100%;
    }
    #moon {
      font-size: 0.75em;
      z-index: 100;
    }
    h1 {
      font-size: 1.5em;
    }
    header {
      position: absolute;
      bottom: 8em;
      left: 5em;
      right: 0;
    }
}

/*Medium devices (tablets, small laptops)*/
@media only screen 
  and (min-device-width: 768px) 
  and (max-device-width: 960px) {
    #night {
      width: 103%;
    }
    #moon {
      font-size: 1em;
      position: absolute;
      top: 35%;
      left: 65%;
    }
    header {
      position: absolute;
      bottom: 14em;
      right: 15em;
    }
    .navbar {
      padding-right: 7em;
    }
}

/*Large devices (laptops)*/
@media only screen 
  and (min-width: 961px)
  and (max-device-width: 1200px) {
    #night {
      width: 101.5%;
    }
    #moon {
      font-size: 1.5em;
      position: absolute;
      top: 35%;
      left: 60%;
    }
    header {
      position: absolute;
      bottom: 12em;
      right: 25em;
    }
    .navbar {
      padding-right: 8em;
    }
}

/*Extra large devices (desktops)*/
@media only screen and (min-width: 1201px) {
}

